--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-spinner/animations/ball-newton-cradle.css"
             ],
             "scripts": []
           },
