--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "angular-responsive-carousel": "^2.1.2",
     "ngx-spinner": "^13.1.1",
+    "ng-toggle-button": "1.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
