--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/ngx-spinner/animations/ball-newton-cradle.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
