--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,15 +35,6 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/mariage-solene-florent:1.0.0
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/mariage-solene-florent:mariage-solene-florent
-    - name: 'Deploy to Azure Container Instances'
-      uses: 'azure/aci-deploy@v1'
-      with:
-        resource-group: ${{ secrets.RESOURCE_GROUP }}
-        dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/mariage-solene-florent:1.0.0
-        registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-        registry-username: ${{ secrets.REGISTRY_USERNAME }}
-        registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-        name: mariage-solene-florent
+        docker build -f Dockerfile -t temp .
+        docker tag temp mariagesoleneflorentcr.azurecr.io/mariage-solene-florent:1.0.0
+        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/mariage-solene-florent:1.0.0
